lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> m_expr
Rule 1     m_expr -> expression
Rule 2     m_expr -> expression m_expr
Rule 3     expression -> c_block
Rule 4     expression -> base_expr
Rule 5     expression -> base_expr ;
Rule 6     expression -> if_st
Rule 7     expression -> loop_st
Rule 8     base_expr -> assignment
Rule 9     base_expr -> return
Rule 10    base_expr -> print
Rule 11    operation -> number
Rule 12    operation -> unary_operation
Rule 13    operation -> function
Rule 14    c_block -> { m_expr }
Rule 15    print -> PRINT print_b
Rule 16    print_b -> STRING
Rule 17    print_b -> operation
Rule 18    print_b -> print_b , operation
Rule 19    return -> RETURN condition
Rule 20    return -> RETURN operation
Rule 21    return -> RETURN
Rule 22    array -> [ array_b ]
Rule 23    array_b -> number
Rule 24    array_b -> array_b , number
Rule 25    array_b -> eps
Rule 26    matrix -> [ matrix_b ]
Rule 27    matrix_b -> array
Rule 28    matrix_b -> matrix_b , array
Rule 29    matrix_b -> eps
Rule 30    number -> INTNUM
Rule 31    number -> FLOATNUM
Rule 32    number -> ID
Rule 33    range -> ID [ int_variable , int_variable ]
Rule 34    int_variable -> INTNUM
Rule 35    int_variable -> ID
Rule 36    function -> function_n ( number )
Rule 37    function_n -> ONES
Rule 38    function_n -> EYE
Rule 39    function_n -> ZEROS
Rule 40    condition -> compare
Rule 41    loop_st -> while
Rule 42    loop_st -> for
Rule 43    while -> WHILE ( condition ) loop_b
Rule 44    for -> FOR ID = int_variable : int_variable loop_b
Rule 45    loop_b -> loop_expr
Rule 46    loop_b -> loop_expr ;
Rule 47    loop_b -> { m_loop_expr }
Rule 48    loop_expr -> base_expr
Rule 49    loop_expr -> loop_st
Rule 50    loop_expr -> if_loop_st
Rule 51    loop_expr -> BREAK
Rule 52    loop_expr -> CONTINUE
Rule 53    m_loop_expr -> m_loop_expr loop_b
Rule 54    m_loop_expr -> loop_b
Rule 55    if_st -> IF ( condition ) expression else_st
Rule 56    else_st -> ELSE expression
Rule 57    else_st -> eps
Rule 58    if_loop_st -> IF ( condition ) loop_b else_loop_st
Rule 59    else_loop_st -> ELSE loop_b
Rule 60    else_loop_st -> eps
Rule 61    eps -> <empty>
Rule 62    assign_expr -> ID
Rule 63    assign_expr -> range
Rule 64    assignment -> assign_expr = matrix
Rule 65    assignment -> assign_expr = STRING
Rule 66    assignment -> assign_expr = operation
Rule 67    assignment -> assign_expr ASSIGNADD operation
Rule 68    assignment -> assign_expr ASSIGNSUB operation
Rule 69    assignment -> assign_expr ASSIGNMUL operation
Rule 70    assignment -> assign_expr ASSIGNDIV operation
Rule 71    unary_operation -> negation
Rule 72    unary_operation -> transpose
Rule 73    negation -> - number
Rule 74    transpose -> ID '
Rule 75    operation -> operation + operation
Rule 76    operation -> operation - operation
Rule 77    operation -> operation DOTADD operation
Rule 78    operation -> operation DOTSUB operation
Rule 79    operation -> operation * operation
Rule 80    operation -> operation / operation
Rule 81    operation -> operation DOTMUL operation
Rule 82    operation -> operation DOTDIV operation
Rule 83    operation -> ( operation )
Rule 84    compare -> operation < operation
Rule 85    compare -> operation > operation
Rule 86    compare -> operation EQ operation
Rule 87    compare -> operation NEQ operation
Rule 88    compare -> operation GEQ operation
Rule 89    compare -> operation LEQ operation

Terminals, with rules where they appear

'                    : 74
(                    : 36 43 55 58 83
)                    : 36 43 55 58 83
*                    : 79
+                    : 75
,                    : 18 24 28 33
-                    : 73 76
/                    : 80
:                    : 44
;                    : 5 46
<                    : 84
=                    : 44 64 65 66
>                    : 85
ASSIGNADD            : 67
ASSIGNDIV            : 70
ASSIGNMUL            : 69
ASSIGNSUB            : 68
BREAK                : 51
CONTINUE             : 52
DOTADD               : 77
DOTDIV               : 82
DOTMUL               : 81
DOTSUB               : 78
ELSE                 : 56 59
EQ                   : 86
EYE                  : 38
FLOATNUM             : 31
FOR                  : 44
GEQ                  : 88
ID                   : 32 33 35 44 62 74
IF                   : 55 58
INTNUM               : 30 34
LEQ                  : 89
NEQ                  : 87
ONES                 : 37
PRINT                : 15
RETURN               : 19 20 21
STRING               : 16 65
WHILE                : 43
ZEROS                : 39
[                    : 22 26 33
]                    : 22 26 33
error                : 
{                    : 14 47
}                    : 14 47

Nonterminals, with rules where they appear

array                : 27 28
array_b              : 22 24
assign_expr          : 64 65 66 67 68 69 70
assignment           : 8
base_expr            : 4 5 48
c_block              : 3
compare              : 40
condition            : 19 43 55 58
else_loop_st         : 58
else_st              : 55
eps                  : 25 29 57 60
expression           : 1 2 55 56
for                  : 42
function             : 13
function_n           : 36
if_loop_st           : 50
if_st                : 6
int_variable         : 33 33 44 44
loop_b               : 43 44 53 54 58 59
loop_expr            : 45 46
loop_st              : 7 49
m_expr               : 2 14 0
m_loop_expr          : 47 53
matrix               : 64
matrix_b             : 26 28
negation             : 71
number               : 11 23 24 36 73
operation            : 17 18 20 66 67 68 69 70 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 84 84 85 85 86 86 87 87 88 88 89 89
print                : 10
print_b              : 15 18
range                : 63
return               : 9
transpose            : 72
unary_operation      : 12
while                : 41

Parsing method: LALR

state 0

    (0) S' -> . m_expr
    (1) m_expr -> . expression
    (2) m_expr -> . expression m_expr
    (3) expression -> . c_block
    (4) expression -> . base_expr
    (5) expression -> . base_expr ;
    (6) expression -> . if_st
    (7) expression -> . loop_st
    (14) c_block -> . { m_expr }
    (8) base_expr -> . assignment
    (9) base_expr -> . return
    (10) base_expr -> . print
    (55) if_st -> . IF ( condition ) expression else_st
    (41) loop_st -> . while
    (42) loop_st -> . for
    (64) assignment -> . assign_expr = matrix
    (65) assignment -> . assign_expr = STRING
    (66) assignment -> . assign_expr = operation
    (67) assignment -> . assign_expr ASSIGNADD operation
    (68) assignment -> . assign_expr ASSIGNSUB operation
    (69) assignment -> . assign_expr ASSIGNMUL operation
    (70) assignment -> . assign_expr ASSIGNDIV operation
    (19) return -> . RETURN condition
    (20) return -> . RETURN operation
    (21) return -> . RETURN
    (15) print -> . PRINT print_b
    (43) while -> . WHILE ( condition ) loop_b
    (44) for -> . FOR ID = int_variable : int_variable loop_b
    (62) assign_expr -> . ID
    (63) assign_expr -> . range
    (33) range -> . ID [ int_variable , int_variable ]

    {               shift and go to state 7
    IF              shift and go to state 11
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    ID              shift and go to state 19

    m_expr                         shift and go to state 1
    expression                     shift and go to state 2
    c_block                        shift and go to state 3
    base_expr                      shift and go to state 4
    if_st                          shift and go to state 5
    loop_st                        shift and go to state 6
    assignment                     shift and go to state 8
    return                         shift and go to state 9
    print                          shift and go to state 10
    while                          shift and go to state 12
    for                            shift and go to state 13
    assign_expr                    shift and go to state 14
    range                          shift and go to state 20

state 1

    (0) S' -> m_expr .



state 2

    (1) m_expr -> expression .
    (2) m_expr -> expression . m_expr
    (1) m_expr -> . expression
    (2) m_expr -> . expression m_expr
    (3) expression -> . c_block
    (4) expression -> . base_expr
    (5) expression -> . base_expr ;
    (6) expression -> . if_st
    (7) expression -> . loop_st
    (14) c_block -> . { m_expr }
    (8) base_expr -> . assignment
    (9) base_expr -> . return
    (10) base_expr -> . print
    (55) if_st -> . IF ( condition ) expression else_st
    (41) loop_st -> . while
    (42) loop_st -> . for
    (64) assignment -> . assign_expr = matrix
    (65) assignment -> . assign_expr = STRING
    (66) assignment -> . assign_expr = operation
    (67) assignment -> . assign_expr ASSIGNADD operation
    (68) assignment -> . assign_expr ASSIGNSUB operation
    (69) assignment -> . assign_expr ASSIGNMUL operation
    (70) assignment -> . assign_expr ASSIGNDIV operation
    (19) return -> . RETURN condition
    (20) return -> . RETURN operation
    (21) return -> . RETURN
    (15) print -> . PRINT print_b
    (43) while -> . WHILE ( condition ) loop_b
    (44) for -> . FOR ID = int_variable : int_variable loop_b
    (62) assign_expr -> . ID
    (63) assign_expr -> . range
    (33) range -> . ID [ int_variable , int_variable ]

    $end            reduce using rule 1 (m_expr -> expression .)
    }               reduce using rule 1 (m_expr -> expression .)
    {               shift and go to state 7
    IF              shift and go to state 11
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    ID              shift and go to state 19

    expression                     shift and go to state 2
    m_expr                         shift and go to state 21
    c_block                        shift and go to state 3
    base_expr                      shift and go to state 4
    if_st                          shift and go to state 5
    loop_st                        shift and go to state 6
    assignment                     shift and go to state 8
    return                         shift and go to state 9
    print                          shift and go to state 10
    while                          shift and go to state 12
    for                            shift and go to state 13
    assign_expr                    shift and go to state 14
    range                          shift and go to state 20

state 3

    (3) expression -> c_block .

    {               reduce using rule 3 (expression -> c_block .)
    IF              reduce using rule 3 (expression -> c_block .)
    RETURN          reduce using rule 3 (expression -> c_block .)
    PRINT           reduce using rule 3 (expression -> c_block .)
    WHILE           reduce using rule 3 (expression -> c_block .)
    FOR             reduce using rule 3 (expression -> c_block .)
    ID              reduce using rule 3 (expression -> c_block .)
    $end            reduce using rule 3 (expression -> c_block .)
    }               reduce using rule 3 (expression -> c_block .)
    ELSE            reduce using rule 3 (expression -> c_block .)


state 4

    (4) expression -> base_expr .
    (5) expression -> base_expr . ;

    {               reduce using rule 4 (expression -> base_expr .)
    IF              reduce using rule 4 (expression -> base_expr .)
    RETURN          reduce using rule 4 (expression -> base_expr .)
    PRINT           reduce using rule 4 (expression -> base_expr .)
    WHILE           reduce using rule 4 (expression -> base_expr .)
    FOR             reduce using rule 4 (expression -> base_expr .)
    ID              reduce using rule 4 (expression -> base_expr .)
    $end            reduce using rule 4 (expression -> base_expr .)
    }               reduce using rule 4 (expression -> base_expr .)
    ELSE            reduce using rule 4 (expression -> base_expr .)
    ;               shift and go to state 22


state 5

    (6) expression -> if_st .

    {               reduce using rule 6 (expression -> if_st .)
    IF              reduce using rule 6 (expression -> if_st .)
    RETURN          reduce using rule 6 (expression -> if_st .)
    PRINT           reduce using rule 6 (expression -> if_st .)
    WHILE           reduce using rule 6 (expression -> if_st .)
    FOR             reduce using rule 6 (expression -> if_st .)
    ID              reduce using rule 6 (expression -> if_st .)
    $end            reduce using rule 6 (expression -> if_st .)
    }               reduce using rule 6 (expression -> if_st .)
    ELSE            reduce using rule 6 (expression -> if_st .)


state 6

    (7) expression -> loop_st .

    {               reduce using rule 7 (expression -> loop_st .)
    IF              reduce using rule 7 (expression -> loop_st .)
    RETURN          reduce using rule 7 (expression -> loop_st .)
    PRINT           reduce using rule 7 (expression -> loop_st .)
    WHILE           reduce using rule 7 (expression -> loop_st .)
    FOR             reduce using rule 7 (expression -> loop_st .)
    ID              reduce using rule 7 (expression -> loop_st .)
    $end            reduce using rule 7 (expression -> loop_st .)
    }               reduce using rule 7 (expression -> loop_st .)
    ELSE            reduce using rule 7 (expression -> loop_st .)


state 7

    (14) c_block -> { . m_expr }
    (1) m_expr -> . expression
    (2) m_expr -> . expression m_expr
    (3) expression -> . c_block
    (4) expression -> . base_expr
    (5) expression -> . base_expr ;
    (6) expression -> . if_st
    (7) expression -> . loop_st
    (14) c_block -> . { m_expr }
    (8) base_expr -> . assignment
    (9) base_expr -> . return
    (10) base_expr -> . print
    (55) if_st -> . IF ( condition ) expression else_st
    (41) loop_st -> . while
    (42) loop_st -> . for
    (64) assignment -> . assign_expr = matrix
    (65) assignment -> . assign_expr = STRING
    (66) assignment -> . assign_expr = operation
    (67) assignment -> . assign_expr ASSIGNADD operation
    (68) assignment -> . assign_expr ASSIGNSUB operation
    (69) assignment -> . assign_expr ASSIGNMUL operation
    (70) assignment -> . assign_expr ASSIGNDIV operation
    (19) return -> . RETURN condition
    (20) return -> . RETURN operation
    (21) return -> . RETURN
    (15) print -> . PRINT print_b
    (43) while -> . WHILE ( condition ) loop_b
    (44) for -> . FOR ID = int_variable : int_variable loop_b
    (62) assign_expr -> . ID
    (63) assign_expr -> . range
    (33) range -> . ID [ int_variable , int_variable ]

    {               shift and go to state 7
    IF              shift and go to state 11
    RETURN          shift and go to state 15
    PRINT           shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    ID              shift and go to state 19

    m_expr                         shift and go to state 23
    expression                     shift and go to state 2
    c_block                        shift and go to state 3
    base_expr                      shift and go to state 4
    if_st                          shift and go to state 5
    loop_st                        shift and go to state 6
    assignment                     shift and go to state 8
    return                         shift and go to state 9
    print                          shift and go to state 10
    while                          shift and go to state 12
    for                            shift and go to state 13
    assign_expr                    shift and go to state 14
    range                          shift and go to state 20

state 8

    (8) base_expr -> assignment .

    ;               reduce using rule 8 (base_expr -> assignment .)
    {               reduce using rule 8 (base_expr -> assignment .)
    IF              reduce using rule 8 (base_expr -> assignment .)
    RETURN          reduce using rule 8 (base_expr -> assignment .)
    PRINT           reduce using rule 8 (base_expr -> assignment .)
    WHILE           reduce using rule 8 (base_expr -> assignment .)
    FOR             reduce using rule 8 (base_expr -> assignment .)
    ID              reduce using rule 8 (base_expr -> assignment .)
    $end            reduce using rule 8 (base_expr -> assignment .)
    }               reduce using rule 8 (base_expr -> assignment .)
    ELSE            reduce using rule 8 (base_expr -> assignment .)
    BREAK           reduce using rule 8 (base_expr -> assignment .)
    CONTINUE        reduce using rule 8 (base_expr -> assignment .)


state 9

    (9) base_expr -> return .

    ;               reduce using rule 9 (base_expr -> return .)
    {               reduce using rule 9 (base_expr -> return .)
    IF              reduce using rule 9 (base_expr -> return .)
    RETURN          reduce using rule 9 (base_expr -> return .)
    PRINT           reduce using rule 9 (base_expr -> return .)
    WHILE           reduce using rule 9 (base_expr -> return .)
    FOR             reduce using rule 9 (base_expr -> return .)
    ID              reduce using rule 9 (base_expr -> return .)
    $end            reduce using rule 9 (base_expr -> return .)
    }               reduce using rule 9 (base_expr -> return .)
    ELSE            reduce using rule 9 (base_expr -> return .)
    BREAK           reduce using rule 9 (base_expr -> return .)
    CONTINUE        reduce using rule 9 (base_expr -> return .)


state 10

    (10) base_expr -> print .

    ;               reduce using rule 10 (base_expr -> print .)
    {               reduce using rule 10 (base_expr -> print .)
    IF              reduce using rule 10 (base_expr -> print .)
    RETURN          reduce using rule 10 (base_expr -> print .)
    PRINT           reduce using rule 10 (base_expr -> print .)
    WHILE           reduce using rule 10 (base_expr -> print .)
    FOR             reduce using rule 10 (base_expr -> print .)
    ID              reduce using rule 10 (base_expr -> print .)
    $end            reduce using rule 10 (base_expr -> print .)
    }               reduce using rule 10 (base_expr -> print .)
    ELSE            reduce using rule 10 (base_expr -> print .)
    BREAK           reduce using rule 10 (base_expr -> print .)
    CONTINUE        reduce using rule 10 (base_expr -> print .)


state 11

    (55) if_st -> IF . ( condition ) expression else_st

    (               shift and go to state 24


state 12

    (41) loop_st -> while .

    {               reduce using rule 41 (loop_st -> while .)
    IF              reduce using rule 41 (loop_st -> while .)
    RETURN          reduce using rule 41 (loop_st -> while .)
    PRINT           reduce using rule 41 (loop_st -> while .)
    WHILE           reduce using rule 41 (loop_st -> while .)
    FOR             reduce using rule 41 (loop_st -> while .)
    ID              reduce using rule 41 (loop_st -> while .)
    $end            reduce using rule 41 (loop_st -> while .)
    }               reduce using rule 41 (loop_st -> while .)
    ELSE            reduce using rule 41 (loop_st -> while .)
    ;               reduce using rule 41 (loop_st -> while .)
    BREAK           reduce using rule 41 (loop_st -> while .)
    CONTINUE        reduce using rule 41 (loop_st -> while .)


state 13

    (42) loop_st -> for .

    {               reduce using rule 42 (loop_st -> for .)
    IF              reduce using rule 42 (loop_st -> for .)
    RETURN          reduce using rule 42 (loop_st -> for .)
    PRINT           reduce using rule 42 (loop_st -> for .)
    WHILE           reduce using rule 42 (loop_st -> for .)
    FOR             reduce using rule 42 (loop_st -> for .)
    ID              reduce using rule 42 (loop_st -> for .)
    $end            reduce using rule 42 (loop_st -> for .)
    }               reduce using rule 42 (loop_st -> for .)
    ELSE            reduce using rule 42 (loop_st -> for .)
    ;               reduce using rule 42 (loop_st -> for .)
    BREAK           reduce using rule 42 (loop_st -> for .)
    CONTINUE        reduce using rule 42 (loop_st -> for .)


state 14

    (64) assignment -> assign_expr . = matrix
    (65) assignment -> assign_expr . = STRING
    (66) assignment -> assign_expr . = operation
    (67) assignment -> assign_expr . ASSIGNADD operation
    (68) assignment -> assign_expr . ASSIGNSUB operation
    (69) assignment -> assign_expr . ASSIGNMUL operation
    (70) assignment -> assign_expr . ASSIGNDIV operation

    =               shift and go to state 25
    ASSIGNADD       shift and go to state 26
    ASSIGNSUB       shift and go to state 27
    ASSIGNMUL       shift and go to state 28
    ASSIGNDIV       shift and go to state 29


state 15

    (19) return -> RETURN . condition
    (20) return -> RETURN . operation
    (21) return -> RETURN .
    (40) condition -> . compare
    (11) operation -> . number
    (12) operation -> . unary_operation
    (13) operation -> . function
    (75) operation -> . operation + operation
    (76) operation -> . operation - operation
    (77) operation -> . operation DOTADD operation
    (78) operation -> . operation DOTSUB operation
    (79) operation -> . operation * operation
    (80) operation -> . operation / operation
    (81) operation -> . operation DOTMUL operation
    (82) operation -> . operation DOTDIV operation
    (83) operation -> . ( operation )
    (84) compare -> . operation < operation
    (85) compare -> . operation > operation
    (86) compare -> . operation EQ operation
    (87) compare -> . operation NEQ operation
    (88) compare -> . operation GEQ operation
    (89) compare -> . operation LEQ operation
    (30) number -> . INTNUM
    (31) number -> . FLOATNUM
    (32) number -> . ID
    (71) unary_operation -> . negation
    (72) unary_operation -> . transpose
    (36) function -> . function_n ( number )
    (73) negation -> . - number
    (74) transpose -> . ID '
    (37) function_n -> . ONES
    (38) function_n -> . EYE
    (39) function_n -> . ZEROS

  ! shift/reduce conflict for ID resolved as shift
    ;               reduce using rule 21 (return -> RETURN .)
    {               reduce using rule 21 (return -> RETURN .)
    IF              reduce using rule 21 (return -> RETURN .)
    RETURN          reduce using rule 21 (return -> RETURN .)
    PRINT           reduce using rule 21 (return -> RETURN .)
    WHILE           reduce using rule 21 (return -> RETURN .)
    FOR             reduce using rule 21 (return -> RETURN .)
    $end            reduce using rule 21 (return -> RETURN .)
    }               reduce using rule 21 (return -> RETURN .)
    ELSE            reduce using rule 21 (return -> RETURN .)
    BREAK           reduce using rule 21 (return -> RETURN .)
    CONTINUE        reduce using rule 21 (return -> RETURN .)
    (               shift and go to state 37
    INTNUM          shift and go to state 38
    FLOATNUM        shift and go to state 39
    ID              shift and go to state 40
    -               shift and go to state 36
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    ZEROS           shift and go to state 46

  ! ID              [ reduce using rule 21 (return -> RETURN .) ]

    condition                      shift and go to state 30
    operation                      shift and go to state 31
    compare                        shift and go to state 32
    number                         shift and go to state 33
    unary_operation                shift and go to state 34
    function                       shift and go to state 35
    negation                       shift and go to state 41
    transpose                      shift and go to state 42
    function_n                     shift and go to state 43

state 16

    (15) print -> PRINT . print_b
    (16) print_b -> . STRING
    (17) print_b -> . operation
    (18) print_b -> . print_b , operation
    (11) operation -> . number
    (12) operation -> . unary_operation
    (13) operation -> . function
    (75) operation -> . operation + operation
    (76) operation -> . operation - operation
    (77) operation -> . operation DOTADD operation
    (78) operation -> . operation DOTSUB operation
    (79) operation -> . operation * operation
    (80) operation -> . operation / operation
    (81) operation -> . operation DOTMUL operation
    (82) operation -> . operation DOTDIV operation
    (83) operation -> . ( operation )
    (30) number -> . INTNUM
    (31) number -> . FLOATNUM
    (32) number -> . ID
    (71) unary_operation -> . negation
    (72) unary_operation -> . transpose
    (36) function -> . function_n ( number )
    (73) negation -> . - number
    (74) transpose -> . ID '
    (37) function_n -> . ONES
    (38) function_n -> . EYE
    (39) function_n -> . ZEROS

    STRING          shift and go to state 48
    (               shift and go to state 37
    INTNUM          shift and go to state 38
    FLOATNUM        shift and go to state 39
    ID              shift and go to state 40
    -               shift and go to state 36
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    ZEROS           shift and go to state 46

    print_b                        shift and go to state 47
    operation                      shift and go to state 49
    number                         shift and go to state 33
    unary_operation                shift and go to state 34
    function                       shift and go to state 35
    negation                       shift and go to state 41
    transpose                      shift and go to state 42
    function_n                     shift and go to state 43

state 17

    (43) while -> WHILE . ( condition ) loop_b

    (               shift and go to state 50


state 18

    (44) for -> FOR . ID = int_variable : int_variable loop_b

    ID              shift and go to state 51


state 19

    (62) assign_expr -> ID .
    (33) range -> ID . [ int_variable , int_variable ]

    =               reduce using rule 62 (assign_expr -> ID .)
    ASSIGNADD       reduce using rule 62 (assign_expr -> ID .)
    ASSIGNSUB       reduce using rule 62 (assign_expr -> ID .)
    ASSIGNMUL       reduce using rule 62 (assign_expr -> ID .)
    ASSIGNDIV       reduce using rule 62 (assign_expr -> ID .)
    [               shift and go to state 52


state 20

    (63) assign_expr -> range .

    =               reduce using rule 63 (assign_expr -> range .)
    ASSIGNADD       reduce using rule 63 (assign_expr -> range .)
    ASSIGNSUB       reduce using rule 63 (assign_expr -> range .)
    ASSIGNMUL       reduce using rule 63 (assign_expr -> range .)
    ASSIGNDIV       reduce using rule 63 (assign_expr -> range .)


state 21

    (2) m_expr -> expression m_expr .

    $end            reduce using rule 2 (m_expr -> expression m_expr .)
    }               reduce using rule 2 (m_expr -> expression m_expr .)


state 22

    (5) expression -> base_expr ; .

    {               reduce using rule 5 (expression -> base_expr ; .)
    IF              reduce using rule 5 (expression -> base_expr ; .)
    RETURN          reduce using rule 5 (expression -> base_expr ; .)
    PRINT           reduce using rule 5 (expression -> base_expr ; .)
    WHILE           reduce using rule 5 (expression -> base_expr ; .)
    FOR             reduce using rule 5 (expression -> base_expr ; .)
    ID              reduce using rule 5 (expression -> base_expr ; .)
    $end            reduce using rule 5 (expression -> base_expr ; .)
    }               reduce using rule 5 (expression -> base_expr ; .)
    ELSE            reduce using rule 5 (expression -> base_expr ; .)


state 23

    (14) c_block -> { m_expr . }

    }               shift and go to state 53


state 24

    (55) if_st -> IF ( . condition ) expression else_st
    (40) condition -> . compare
    (84) compare -> . operation < operation
    (85) compare -> . operation > operation
    (86) compare -> . operation EQ operation
    (87) compare -> . operation NEQ operation
    (88) compare -> . operation GEQ operation
    (89) compare -> . operation LEQ operation
    (11) operation -> . number
    (12) operation -> . unary_operation
    (13) operation -> . function
    (75) operation -> . operation + operation
    (76) operation -> . operation - operation
    (77) operation -> . operation DOTADD operation
    (78) operation -> . operation DOTSUB operation
    (79) operation -> . operation * operation
    (80) operation -> . operation / operation
    (81) operation -> . operation DOTMUL operation
    (82) operation -> . operation DOTDIV operation
    (83) operation -> . ( operation )
    (30) number -> . INTNUM
    (31) number -> . FLOATNUM
    (32) number -> . ID
    (71) unary_operation -> . negation
    (72) unary_operation -> . transpose
    (36) function -> . function_n ( number )
    (73) negation -> . - number
    (74) transpose -> . ID '
    (37) function_n -> . ONES
    (38) function_n -> . EYE
    (39) function_n -> . ZEROS

    (               shift and go to state 37
    INTNUM          shift and go to state 38
    FLOATNUM        shift and go to state 39
    ID              shift and go to state 40
    -               shift and go to state 36
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    ZEROS           shift and go to state 46

    condition                      shift and go to state 54
    compare                        shift and go to state 32
    operation                      shift and go to state 55
    number                         shift and go to state 33
    unary_operation                shift and go to state 34
    function                       shift and go to state 35
    negation                       shift and go to state 41
    transpose                      shift and go to state 42
    function_n                     shift and go to state 43

state 25

    (64) assignment -> assign_expr = . matrix
    (65) assignment -> assign_expr = . STRING
    (66) assignment -> assign_expr = . operation
    (26) matrix -> . [ matrix_b ]
    (11) operation -> . number
    (12) operation -> . unary_operation
    (13) operation -> . function
    (75) operation -> . operation + operation
    (76) operation -> . operation - operation
    (77) operation -> . operation DOTADD operation
    (78) operation -> . operation DOTSUB operation
    (79) operation -> . operation * operation
    (80) operation -> . operation / operation
    (81) operation -> . operation DOTMUL operation
    (82) operation -> . operation DOTDIV operation
    (83) operation -> . ( operation )
    (30) number -> . INTNUM
    (31) number -> . FLOATNUM
    (32) number -> . ID
    (71) unary_operation -> . negation
    (72) unary_operation -> . transpose
    (36) function -> . function_n ( number )
    (73) negation -> . - number
    (74) transpose -> . ID '
    (37) function_n -> . ONES
    (38) function_n -> . EYE
    (39) function_n -> . ZEROS

    STRING          shift and go to state 57
    [               shift and go to state 59
    (               shift and go to state 37
    INTNUM          shift and go to state 38
    FLOATNUM        shift and go to state 39
    ID              shift and go to state 40
    -               shift and go to state 36
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    ZEROS           shift and go to state 46

    matrix                         shift and go to state 56
    operation                      shift and go to state 58
    number                         shift and go to state 33
    unary_operation                shift and go to state 34
    function                       shift and go to state 35
    negation                       shift and go to state 41
    transpose                      shift and go to state 42
    function_n                     shift and go to state 43

state 26

    (67) assignment -> assign_expr ASSIGNADD . operation
    (11) operation -> . number
    (12) operation -> . unary_operation
    (13) operation -> . function
    (75) operation -> . operation + operation
    (76) operation -> . operation - operation
    (77) operation -> . operation DOTADD operation
    (78) operation -> . operation DOTSUB operation
    (79) operation -> . operation * operation
    (80) operation -> . operation / operation
    (81) operation -> . operation DOTMUL operation
    (82) operation -> . operation DOTDIV operation
    (83) operation -> . ( operation )
    (30) number -> . INTNUM
    (31) number -> . FLOATNUM
    (32) number -> . ID
    (71) unary_operation -> . negation
    (72) unary_operation -> . transpose
    (36) function -> . function_n ( number )
    (73) negation -> . - number
    (74) transpose -> . ID '
    (37) function_n -> . ONES
    (38) function_n -> . EYE
    (39) function_n -> . ZEROS

    (               shift and go to state 37
    INTNUM          shift and go to state 38
    FLOATNUM        shift and go to state 39
    ID              shift and go to state 40
    -               shift and go to state 36
    ONES            shift and go to state 44
    EYE             shift and go to state 45
    ZEROS           shift and go to state 46

    operation                      shift and go to state 60
    number                         shift and go to state 33
    unary_operation                shift and go to state 34
    function                       shift and go to state 35
    negation                       shift and go to state 41
    transpose                      shift and go to state 42
    function_n                     shift and go to state 43

state 27
